@@ -9,6 +9,7 @@ xx xxx 2017, Version 2.29
 - Remove genre prefixes ("Elokuva:", "Kino:", etc.) from output filenames
 - More streams now obey --proxy
 - Avoid re-downloading subtitles on --resume
+- Quicker check to see if a file has already been downloaded
 
 19 Nov 2017, Version 2.28
 
